--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,31 @@
   line-height: 1.42;
 }
 
+/* FilePond */
+.filepond--root {
+  overflow: hidden;
+}
+.filepond--root.filepond--error {
+  --error-color: #dc3545;
+  border: 1px solid var(--error-color, #dc3545);
+  margin-block-end: 0;
+}
+.filepond--root.filepond--error .filepond--drip {
+  background: #db364580;
+}
+.filepond--root.filepond--error
+  .filepond--drop-label.filepond--drop-label
+  label {
+  color: var(--error-color, #dc3545);
+}
+.filepond--root.filepond--error .filepond--label-action {
+  -webkit-text-decoration-color: var(--error-color, #dc3545);
+  text-decoration-color: var(--error-color, #dc3545);
+}
+.filepond--root.filepond--error + .invalid-feedback {
+  display: block;
+}
+
 /* Certificate Settings */
 #customThemeSettings[data-theme] > * {
   display: none;
