Use SCSS to handle style

--- a/css/style.css
+++ b/css/style.css
@@ -1,332 +1,1 @@
-/* Quill Rich Text Editor */
-.ql-snow .ql-picker.ql-header .ql-picker-label[data-value='1']::before,
-.ql-snow .ql-picker.ql-header .ql-picker-item[data-value='1']::before {
-  content: 'Heading';
-}
-.ql-snow .ql-picker.ql-header .ql-picker-label[data-value='2']::before,
-.ql-snow .ql-picker.ql-header .ql-picker-item[data-value='2']::before {
-  content: 'Subheading';
-}
-.ql-font-lato {
-  font-family: 'Lato', sans-serif;
-}
-.ql-snow .ql-picker.ql-font .ql-picker-label[data-value='lato']::before,
-.ql-snow .ql-picker.ql-font .ql-picker-item[data-value='lato']::before {
-  content: 'Lato';
-}
-.ql-font-alexandria {
-  font-family: 'Alexandria', sans-serif;
-}
-.ql-snow .ql-picker.ql-font .ql-picker-label[data-value='alexandria']::before,
-.ql-snow .ql-picker.ql-font .ql-picker-item[data-value='alexandria']::before {
-  content: 'Alexandria';
-}
-.ql-snow .ql-picker.ql-weight {
-  width: 60px;
-}
-.ql-weight-100 {
-  font-weight: 100;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='100']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='100']::before {
-  content: '100';
-}
-.ql-weight-200 {
-  font-weight: 200;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='200']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='200']::before {
-  content: '200';
-}
-.ql-weight-300 {
-  font-weight: 300;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='300']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='300']::before {
-  content: '300';
-}
-.ql-weight-400 {
-  font-weight: 400;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='400']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='400']::before {
-  content: '400';
-}
-.ql-weight-500 {
-  font-weight: 500;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='500']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='500']::before {
-  content: '500';
-}
-.ql-weight-600 {
-  font-weight: 600;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='600']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='600']::before {
-  content: '600';
-}
-.ql-weight-700 {
-  font-weight: 700;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='700']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='700']::before {
-  content: '700';
-}
-.ql-weight-800 {
-  font-weight: 800;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='800']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='800']::before {
-  content: '800';
-}
-.ql-weight-900 {
-  font-weight: 900;
-}
-.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value='900']::before,
-.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value='900']::before {
-  content: '900';
-}
-.ql-editor {
-  min-height: 160px;
-  padding: 40px;
-}
-.ql-editor,
-.ql-editor * {
-  line-height: 1.42;
-}
-.ql-editor.ql-blank::before {
-  left: 45px;
-  right: 45px;
-}
-
-/* FilePond */
-.filepond--root {
-  overflow: hidden;
-}
-.filepond--root.filepond--error {
-  --error-color: #dc3545;
-  border: 1px solid var(--error-color, #dc3545);
-  margin-block-end: 0;
-}
-.filepond--root.filepond--error .filepond--drip {
-  background: #db364580;
-}
-.filepond--root.filepond--error
-  .filepond--drop-label.filepond--drop-label
-  label {
-  color: var(--error-color, #dc3545);
-}
-.filepond--root.filepond--error .filepond--label-action {
-  -webkit-text-decoration-color: var(--error-color, #dc3545);
-  text-decoration-color: var(--error-color, #dc3545);
-}
-.filepond--root.filepond--error + .invalid-feedback {
-  display: block;
-}
-
-/* Certificate Settings */
-#customThemeSettings[data-theme] > * {
-  display: none;
-}
-#customThemeSettings[data-theme='borderWithSideImage'] #withSideImage,
-#customThemeSettings[data-theme='withSideImage'] #withSideImage,
-#customThemeSettings[data-theme='withBackgroundImage'] #withBackgroundImage,
-#customThemeSettings[data-theme*='border'] #withBorderColor,
-#customThemeSettings:not([data-theme='withBackgroundImage'])
-  #withBackgroundColor {
-  display: block;
-}
-#generator_sideImagePreview,
-#generator_backgroundImagePreview {
-  position: relative;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  height: 160px;
-  border-radius: 20px;
-  background-color: #f7f7f7;
-  padding: 20px;
-  margin-block-end: 12px;
-}
-#generator_sideImagePreview.active,
-#generator_backgroundImagePreview.active {
-  display: flex;
-}
-#generator_sideImagePreview img,
-#generator_backgroundImagePreview img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
-}
-#generator_sideImagePreview .btn-close,
-#generator_backgroundImagePreview .btn-close {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-
-/* Certificate content */
-.certificate-preview {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 32px;
-  background-color: #f6f6f6;
-  border: solid #dbdbdb;
-  border-width: 1px;
-  border-radius: 20px;
-  overflow: hidden;
-}
-#canvasPreview {
-  width: 100%;
-}
-#certificate {
-  --damnation-x: 1180px;
-  --damnation-y: 910px;
-  --padding-x: 200px;
-  --padding-y: 100px;
-
-  /* Hide container until certificate is generated */
-  display: none;
-
-  /* Ensure scaling center */
-  transform-origin: center;
-
-  width: var(--damnation-x, 1150px);
-  height: var(--damnation-y, 910px);
-
-  padding-inline: var(--padding-x, 200px);
-  padding-block: var(--padding-y, 100px);
-
-  /* Fix flex view or preview container */
-  flex-shrink: 0;
-
-  /* Make sure it is like Quilljs editor */
-  font-family: Helvetica, Arial, sans-serif;
-  /* Scaling with font size */
-  font-size: 16px;
-
-  background-color: var(--background-color, #ffffff);
-}
-#certificate[data-orientation='portrait'] {
-  --damnation-x: 910px;
-  --damnation-y: 1180px;
-  --padding-x: 100px;
-  --padding-y: 200px;
-
-  width: var(--damnation-x, 910px);
-  height: var(--damnation-y, 1180px);
-
-  padding-inline: var(--padding-x, 100px);
-  padding-block: var(--padding-y, 200px);
-}
-#certificate > .content > .data-form {
-  margin-block: auto;
-  padding: 0px;
-  width: 100%;
-
-  /* Required for Quilljs editor */
-  height: unset;
-}
-#certificate > .content > .side {
-  display: none;
-}
-#certificate > .content {
-  width: 100%;
-  height: 100%;
-
-  display: flex;
-}
-
-/* Certificate styles */
-/* With background */
-#certificate[data-theme='withBackgroundImage'] {
-  background-image: var(--background-image);
-  background-size: cover;
-}
-
-/* With border */
-#certificate[data-theme*='border'] {
-  position: relative;
-
-  --padding-x: 50px;
-  --padding-y: 50px;
-}
-#certificate[data-theme*='border']:before {
-  content: '';
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: calc(100% - 40px);
-  height: calc(100% - 40px);
-  border: 3px solid var(--border-accent-color, #b1b1b1be);
-}
-#certificate[data-theme*='border']:after {
-  content: '';
-  position: absolute;
-  top: 28px;
-  left: 28px;
-  width: calc(100% - 56px);
-  height: calc(100% - 56px);
-  border: 15px solid var(--border-color, #b1b1b1be);
-}
-#certificate[data-theme*='border'] > .content {
-  position: relative;
-  z-index: 1;
-
-  border: 6px solid var(--border-accent-color, #b1b1b1be);
-}
-#certificate[data-theme*='border'] > .content > .data-form {
-  padding: 60px;
-}
-
-/* With side image */
-#certificate[data-orientation='portrait'] > .content {
-  flex-direction: column;
-}
-#certificate[data-theme*='ithSideImage']:not([data-theme*='border'])
-  > .content {
-  gap: 80px;
-}
-#certificate[data-theme*='ithSideImage'] > .content > .data-form {
-  max-width: 65%;
-}
-#certificate[data-theme*='ithSideImage']:not([data-theme*='border']) {
-  --padding-x: 40px;
-  --padding-y: 40px;
-}
-#certificate[data-theme*='ithSideImage'] > .content > .side {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex: 1 0 auto;
-  max-width: 35%;
-  overflow: clip;
-
-  /* Image position */
-  order: var(--side-position, 0);
-}
-#certificate[data-theme*='ithSideImage'] > .content > .side img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-#certificate[data-theme*='ithSideImage'][data-orientation='portrait']
-  > .content
-  > .data-form {
-  max-width: unset;
-  max-height: 75%;
-}
-#certificate[data-theme*='ithSideImage'][data-orientation='portrait']
-  > .content
-  > .side {
-  max-width: unset;
-  max-height: 25%;
-}
-#certificate[data-theme*='ithSideImage']:not([data-theme*='border'])
-  > .content
-  > .side {
-  margin: -40px;
-}
+.ql-snow .ql-font-lato{font-family:lato,sans-serif}.ql-snow .ql-font-alexandria{font-family:alexandria,sans-serif}.ql-snow .ql-weight-100{font-weight:100}.ql-snow .ql-weight-200{font-weight:200}.ql-snow .ql-weight-300{font-weight:300}.ql-snow .ql-weight-400{font-weight:400}.ql-snow .ql-weight-500{font-weight:500}.ql-snow .ql-weight-600{font-weight:600}.ql-snow .ql-weight-700{font-weight:700}.ql-snow .ql-weight-800{font-weight:800}.ql-snow .ql-weight-900{font-weight:900}.ql-snow .ql-picker.ql-header .ql-picker-label[data-value="1"]::before,.ql-snow .ql-picker.ql-header .ql-picker-item[data-value="1"]::before{content:"Heading"}.ql-snow .ql-picker.ql-header .ql-picker-label[data-value="2"]::before,.ql-snow .ql-picker.ql-header .ql-picker-item[data-value="2"]::before{content:"Subheading"}.ql-snow .ql-picker.ql-font .ql-picker-label[data-value=lato]::before,.ql-snow .ql-picker.ql-font .ql-picker-item[data-value=lato]::before{content:"Lato"}.ql-snow .ql-picker.ql-font .ql-picker-label[data-value=alexandria]::before,.ql-snow .ql-picker.ql-font .ql-picker-item[data-value=alexandria]::before{content:"Alexandria"}.ql-snow .ql-picker.ql-weight{width:60px}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="100"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="100"]::before{content:"100"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="200"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="200"]::before{content:"200"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="300"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="300"]::before{content:"300"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="400"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="400"]::before{content:"400"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="500"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="500"]::before{content:"500"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="600"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="600"]::before{content:"600"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="700"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="700"]::before{content:"700"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="800"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="800"]::before{content:"800"}.ql-snow .ql-picker.ql-weight .ql-picker-label[data-value="900"]::before,.ql-snow .ql-picker.ql-weight .ql-picker-item[data-value="900"]::before{content:"900"}.ql-editor{min-height:160px;padding:40px;line-height:1.42}.ql-editor.ql-blank::before{left:45px;right:45px}.filepond--root{overflow:hidden}.filepond--root.filepond--error{border:1px solid #dc3545}.filepond--root.filepond--error .filepond--drip{background:rgba(220,53,69,.5)}.filepond--root.filepond--error .filepond--drop-label label,.filepond--root.filepond--error .filepond--label-action{color:#dc3545;text-decoration-color:#dc3545}#customThemeSettings[data-theme]>*{display:none}#customThemeSettings[data-theme=borderWithSideImage] #withSideImage,#customThemeSettings[data-theme=withSideImage] #withSideImage,#customThemeSettings[data-theme=withBackgroundImage] #withBackgroundImage,#customThemeSettings[data-theme*=border] #withBorderColor,#customThemeSettings:not([data-theme=withBackgroundImage]) #withBackgroundColor{display:block}.certificate-preview{position:relative;display:flex;justify-content:center;align-items:center;padding:32px;background-color:#f6f6f6;border:solid #dbdbdb;border-width:1px;border-radius:20px;overflow:hidden}#canvasPreview{width:100%}#certificate{display:none;transform-origin:center;width:1180px;height:910px;padding-inline:200px;padding-block:100px;flex-shrink:0;font-family:Helvetica,Arial,sans-serif;font-size:16px;background-color:var(--background-color, #ffffff)}#certificate>.content{display:flex;width:100%;height:100%}#certificate>.content>.data-form{margin-block:auto;padding:0px;width:100%;height:unset}#certificate>.content>.side{display:none}#certificate[data-theme=withBackgroundImage]{background-image:var(--background-image);background-size:cover}#certificate[data-theme*=border]{position:relative;padding:50px}#certificate[data-theme*=border]::before,#certificate[data-theme*=border]::after{content:"";position:absolute;box-sizing:border-box}#certificate[data-theme*=border]::before{top:20px;left:20px;width:calc(100% - 40px);height:calc(100% - 40px);border:3px solid var(--border-accent-color, rgba(177, 177, 177, 0.7450980392))}#certificate[data-theme*=border]::after{top:28px;left:28px;width:calc(100% - 56px);height:calc(100% - 56px);border:15px solid var(--border-color, rgba(177, 177, 177, 0.7450980392))}#certificate[data-theme*=border]>.content{position:relative;border:6px solid var(--border-accent-color, rgba(177, 177, 177, 0.7450980392));z-index:1}#certificate[data-theme*=border]>.content>.data-form{padding:60px}#certificate:not([data-theme*=border])[data-theme*=ithSideImage]{padding:40px}#certificate:not([data-theme*=border])[data-theme*=ithSideImage]>.content{gap:80px}#certificate:not([data-theme*=border])[data-theme*=ithSideImage]>.content>.side{margin:-40px}#certificate[data-theme*=ithSideImage]>.content>.data-form{max-width:65%}#certificate[data-theme*=ithSideImage]>.content>.side{display:flex;justify-content:center;align-items:center;flex:1 0 auto;max-width:35%;overflow:clip;order:var(--side-position, 0)}#certificate[data-theme*=ithSideImage]>.content>.side img{width:100%;height:100%;object-fit:cover}#certificate[data-orientation=portrait]{width:910px;height:1180px;padding-inline:100px;padding-block:200px}#certificate[data-orientation=portrait][data-theme*=ithSideImage]>.content>.data-form{max-width:unset;max-height:75%}#certificate[data-orientation=portrait][data-theme*=ithSideImage]>.content>.side{max-width:unset;max-height:25%}/*# sourceMappingURL=style.css.map */
